--- a/api.xml/build.xml
+++ b/api.xml/build.xml
@@ -23,7 +23,7 @@ Microsystems, Inc. All Rights Reserved.
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
     <property name="nbm_alias" value="nb_ide"/>
-
+    <property name="build" location="../nbbuild/netbeans"/>
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="${nbext_root}/nbantext.jar"/>
@@ -31,6 +31,10 @@ Microsystems, Inc. All Rights Reserved.
 
     <property name="build.compiler.debug" value="on"/>
 
+
+    <patternset id="xml/api.files">
+        <include name="modules/autoload/xml-api.jar"/>
+    </patternset>
 
     <target name="init">
         <property file="${xml_root}/spec-vers.properties"/>
@@ -42,7 +46,7 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="Compiling XML tools API classes..."/>
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
-                <fileset dir="${nbroot}/openide/netbeans/lib">
+                <fileset dir="${build}/lib">
                     <include name="openide*.jar"/>
                 </fileset>
                 <fileset dir="${nbroot}/core/external">
@@ -53,10 +57,10 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="jars" depends="init,compile">
-        <mkdir dir="netbeans/modules"/>
+        <mkdir dir="${build}/modules"/>
 
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <locjar jarfile="netbeans/modules/autoload/xml-api.jar"
+        <locjar jarfile="${build}/modules/autoload/xml-api.jar"
                 manifest="manifest-subst.mf"
                 compress="false">
             <fileset dir="src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
@@ -64,24 +68,25 @@ Microsystems, Inc. All Rights Reserved.
         </locjar>    
     </target>
 
-    <target name="release">
-    </target>
-
     <target name="javahelp">
         <!-- No one provided. -->
     </target>
 
-    <target name="netbeans" depends="jars,release,javahelp">
-        <genlist targetname="nbm" outputfiledir="netbeans"/>
+    <target name="netbeans" depends="jars,javahelp">
+      <genlist outputfiledir="${build}" module="modules/autoload/xml-api.jar">
+          <fileset dir="${build}">
+	      <patternset refID="xml/api.files"/>
+          </fileset>
+      </genlist>
     </target>
 
         
     <target name="nbm" depends="netbeans">
         <delete dir="Info"/>
         <makenbm file="../xml-api.nbm"
-                 topdir="."
+	         productDir="${build}"
                  needsrestart="false"
-                 module="netbeans/modules/autoload/xml-api.jar"
+                 module="modules/autoload/xml-api.jar"
                  homepage="http://xml.${homepage.base}/api/"
                  distribution="http://${dist.base}/xml-api.nbm">
             <license file="${license.file}"/>
@@ -91,14 +96,15 @@ Microsystems, Inc. All Rights Reserved.
 
     <target name="clean">
         <delete>
-            <fileset dir="src">
-                <include name="**/*.class"/>
-            </fileset>
+          <fileset dir="src">
+              <include name="**/*.class"/>
+           </fileset>
+          <fileset dir="${build}">
+	      <patternset refID="xml/api.files"/>
+          </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
         <delete file="../xml-api.nbm"/>
-        <delete dir="netbeans"/>
-        <delete dir="Info"/>
         <delete dir="javadoc"/>
         <delete dir="XML-APIs"/>
         <delete file="XML-APIs.zip"/>
