--- a/editor/build.xml
+++ b/editor/build.xml
@@ -18,26 +18,33 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
+  <property name="build" location="../nbbuild/netbeans"/>
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
+
+  <patternset id="editor.files">
+    <include name="modules/editor.jar"/>
+    <include name="modules/ext/nb-editor.jar"/>
+    <include name="system/ParserDB/jdk*.jc*"/>
+  </patternset>
 
   <target name="compile">
     <javac srcdir="libsrc" destdir="libsrc" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <!-- We need Openide-util library. Namely RequestProcessor. -->
       <classpath>
-        <pathelement location="../openide/netbeans/lib/openide.jar"/>
+        <pathelement location="${build}/lib/openide.jar"/>
       </classpath>
     </javac>
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath>
        <!-- XXX illegal dependency on core! -->
-       <pathelement location="../core/netbeans/lib/core.jar"/>
+       <pathelement location="${build}/lib/core.jar"/>
        <pathelement location="libsrc"/>
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <pathelement location="../openide/netbeans/lib/openide.jar"/>
-        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-        <pathelement location="../java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
+        <pathelement location="${build}/lib/openide.jar"/>
+        <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="${build}/modules/autoload/java-src-model.jar"/>
         <fileset dir="../core/external">
           <include name="regexp*.jar"/>
           <include name="xml-apis*.jar"/>
@@ -47,19 +54,19 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="jars" depends="compile">
-    <mkdir dir="netbeans/modules"/>
+    <mkdir dir="${build}/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
-    <locjar jarfile="netbeans/modules/editor.jar"
+    <locjar jarfile="${build}/modules/editor.jar"
             manifest="manifest-subst.mf"
             basedir="src"
 	    excludesfile="../nbbuild/standard-jar-excludes.txt"
 	    compress="false">
       <locale name="ja"/>
     </locjar>
-    <mkdir dir="netbeans/modules/ext"/>
-    <locjar jarfile="netbeans/modules/ext/nb-editor.jar"
+    <mkdir dir="${build}/modules/ext"/>
+    <locjar jarfile="${build}/modules/ext/nb-editor.jar"
             basedir="libsrc"
 	    excludesfile="../nbbuild/standard-jar-excludes.txt"
 	    compress="false">
@@ -68,20 +75,24 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="release">
-    <copy todir="netbeans" includeEmptyDirs="false">
+    <copy todir="${build}" includeEmptyDirs="false">
       <fileset dir="release" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
     </copy>
   </target>
 
   <target name="netbeans" depends="jars,release">
-    <genlist targetname="nbm" outputfiledir="netbeans"/>
+      <genlist outputfiledir="${build}" module="modules/editor.jar">
+          <fileset dir="${build}">
+	      <patternset refID="editor.files"/>
+          </fileset>
+      </genlist>
   </target>
 
 
   <target name="nbm" depends="netbeans">
     <makenbm file="editor.nbm"
-             topdir="."
-             module="netbeans/modules/editor.jar"
+             productDir="${build}"
+             module="modules/editor.jar"
 	     homepage="http://editor.${homepage.base}/"
 	     distribution="http://${dist.base}/editor.nbm">
       <license file="${license.file}"/>
@@ -94,17 +105,16 @@ Microsystems, Inc. All Rights Reserved.
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
-    </delete>
-    <delete>
+      <fileset dir="${build}">
+        <patternset refID="editor.files"/>
+      </fileset>
       <fileset dir="libsrc">
         <include name="**/*.class"/>
       </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="editor.nbm"/>
-    <delete dir="netbeans"/>
     <delete dir="javadoc"/>
-    <delete dir="Info"/>
   </target>
 
   <target name="javadoc" description="Build editor module API documentation.">
