--- a/javahelp/build.xml
+++ b/javahelp/build.xml
@@ -18,11 +18,17 @@ Microsystems, Inc. All Rights Reserved.
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
     <property name="license.file" location="../../nbbuild/standard-nbm-license.txt"/>
+    <property name="build" location="../nbbuild/netbeans"/>
 
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../../nbbuild/nbantext.jar"/>
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../../nbbuild/nbantext.jar"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
     <property name="nbroot" location="../.."/>
+
+    <patternset id="core/javahelp.files">
+        <include name="modules/autoload/javahelp-api.jar"/>
+	<include name="modules/autoload/ext/jh*.jar"/>
+    </patternset>
 
     <target name="init">
         <ant dir="../external" target="unscramble"/>
@@ -32,7 +38,7 @@ Microsystems, Inc. All Rights Reserved.
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>
                 <pathelement location="../../openide/openide-13javac-workaround.jar"/>
-                <fileset dir="../../openide/netbeans/lib">
+                <fileset dir="${build}/lib">
                     <include name="openide*.jar" />
                 </fileset>
                 <fileset dir="../external">
@@ -44,10 +50,10 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="jars" depends="compile">
-        <mkdir dir="netbeans/modules/autoload"/>
+        <mkdir dir="${build}/modules/autoload"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <locjar jarfile="netbeans/modules/autoload/javahelp-api.jar"
+        <locjar jarfile="${build}/modules/autoload/javahelp-api.jar"
                 basedir="src"
                 manifest="manifest-subst.mf"
                 excludesfile="../../nbbuild/standard-jar-excludes.txt"
@@ -57,8 +63,8 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="release" depends="init">
-        <mkdir dir="netbeans/modules/autoload/ext"/>
-        <copy todir="netbeans/modules/autoload/ext">
+        <mkdir dir="${build}/modules/autoload/ext"/>
+        <copy todir="${build}/modules/autoload/ext">
             <fileset dir="../external">
                 <include name="jh*.jar"/>
             </fileset>
@@ -66,13 +72,17 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="netbeans" depends="jars,release" description="Build everything.">
-        <genlist targetname="nbm" outputfiledir="netbeans"/>
+        <genlist outputfiledir="${build}" module="modules/autoload/javahelp-api.jar">
+            <fileset dir="${build}">
+                <patternset refID="core/javahelp.files"/>
+            </fileset>
+        </genlist>
     </target>
 
     <target name="nbm" depends="netbeans" description="Build NBM.">
         <makenbm file="javahelp-api.nbm"
-                 topdir="."
-                 module="netbeans/modules/autoload/javahelp-api.jar"
+                 productDir="${build}"
+                 module="modules/autoload/javahelp-api.jar"
                  homepage="http://core.${homepage.base}/"
                  distribution="http://${dist.base}/javahelp-api.nbm">
             <license name="javahelp-api-license.txt">
@@ -103,10 +113,11 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="src">
                 <include name="**/*.class"/>
             </fileset>
+            <fileset dir="${build}">
+                <patternset refID="core/javahelp.files"/>
+            </fileset>
         </delete>
-        <delete dir="netbeans"/>
         <delete file="javahelp-api.nbm"/>
-        <delete dir="Info"/>
         <delete dir="javadoc"/>
         <delete dir="JavahelpAPIs"/>
         <delete file="JavahelpAPIs.zip"/>
