--- a/lexer/build.xml
+++ b/lexer/build.xml
@@ -19,12 +19,17 @@ Microsystems, Inc. All Rights Reserved.
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" location="../nbbuild/standard-nbm-license.txt"/>
   <property name="nbroot" location=".."/>
+  <property name="build" location="../nbbuild/netbeans"/>
   <!-- <property name="build.compiler.debug" value="on"/> -->
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="tojar" classname="org.netbeans.nbbuild.ToJar" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
+
+  <patternset id="lexer.files">
+    <include name="modules/lexer.jar"/>
+  </patternset>
 
   <target name="init">
     <ant dir="external" target="unscramble"/>
@@ -64,10 +69,10 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="jars" depends="compile">
-    <mkdir dir="netbeans/modules"/>
+    <mkdir dir="${build}/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="netbeans/modules/lexer.jar"
+    <locjar jarfile="${build}/modules/lexer.jar"
             manifest="manifest-subst.mf"
             basedir="src"
 	    excludesfile="../nbbuild/standard-jar-excludes.txt"
@@ -77,14 +82,18 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="netbeans" depends="jars">
-    <genlist targetname="nbm" outputfiledir="netbeans"/>
+      <genlist outputfiledir="${build}" module="modules/lexer.jar">
+          <fileset dir="${build}">
+	      <patternset refID="lexer.files"/>
+          </fileset>
+      </genlist>
   </target>
 
 
   <target name="nbm" depends="netbeans">
     <makenbm file="lexer.nbm"
-             topdir="."
-	     module="netbeans/modules/lexer.jar"
+             productDir="${build}"
+	     module="modules/lexer.jar"
 	     homepage="http://lexer.${homepage.base}/"
 	     distribution="http://${dist.base}/lexer.nbm">
       <license file="${license.file}"/>
@@ -100,11 +109,12 @@ Microsystems, Inc. All Rights Reserved.
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
+      <fileset dir="${build}">
+        <patternset refID="lexer.files"/>
+      </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="lexer.nbm"/>
-    <delete dir="netbeans"/>
-    <delete dir="Info"/>
     <delete dir="tmp" />
   </target>
 
