--- a/o.n.core/build.xml
+++ b/o.n.core/build.xml
@@ -20,7 +20,20 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" location="../nbbuild/standard-nbm-license.txt"/>
+  <property name="build" location="../nbbuild/netbeans"/>
 
+  <patternset id="core.files">
+    <include name="lib/ext/crimson*.jar"/>
+    <include name="lib/ext/xerces*.jar"/>
+    <include name="lib/ext/xml-apis*.jar"/>
+    <include name="lib/ext/regexp*.jar"/>
+    <include name="lib/core.jar"/>
+    <include name="lib/ext/boot.jar"/>
+    <include name="lib/ide.ks"/>
+    <include name="bin/**"/>
+    <include name="CREDITS.html"/>
+  </patternset>
+  
   <target name="init">
     <ant dir="external" target="unscramble"/>
   </target>
@@ -29,8 +42,10 @@ Microsystems, Inc. All Rights Reserved.
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath>
         <pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <pathelement location="../openide/netbeans/lib/openide.jar"/>
-        <pathelement location="netbeans/lib/ext/boot.jar"/>
+        <fileset dir="${build}/lib">
+          <include name="openide*.jar" />
+        </fileset>
+        <pathelement location="${build}/lib/ext/boot.jar"/>
         <fileset dir="external">
           <include name="regexp*.jar"/>
           <include name="xml-apis*.jar"/>
@@ -38,12 +53,15 @@ Microsystems, Inc. All Rights Reserved.
       </classpath>
     </javac>
   </target>
-
-  <!-- XXX move to bootstrap/build.xml -->  
-  <target name="boot" depends="init">
-    <javac srcdir="bootstrap/src" destdir="bootstrap/src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}"/>
-    <mkdir dir="netbeans/lib/ext" />
-    <jar jarfile="netbeans/lib/ext/boot.jar"
+  
+  <target name="boot">
+    <!-- boot sources should be kept in a separate tree for safety -->
+    <javac srcdir="bootstrap/src" destdir="bootstrap/src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}" 
+        includes="org/netbeans/*java"
+    />    
+    
+    <mkdir dir="${build}/lib/ext" />
+    <jar jarfile="${build}/lib/ext/boot.jar"
             basedir="bootstrap/src"
             excludesfile="../nbbuild/standard-jar-excludes.txt"
 	    compress="false">
@@ -51,10 +69,10 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="jars" depends="compile">
-    <mkdir dir="netbeans/lib"/>
+    <mkdir dir="${build}/lib/ext" />
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="netbeans/lib/core.jar"
+    <locjar jarfile="${build}/lib/core.jar"
             basedir="src"
             manifest="manifest-subst.mf"
             excludesfile="../nbbuild/standard-jar-excludes.txt"
@@ -65,11 +83,11 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="release">
-    <copy todir="netbeans" includeEmptyDirs="false">
+    <copy todir="${build}" includeEmptyDirs="false">
       <fileset dir="release" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
     </copy>
-    <mkdir dir="netbeans/lib/ext"/>
-    <copy todir="netbeans/lib/ext">
+    <mkdir dir="${build}/lib/ext"/>
+    <copy todir="${build}/lib/ext">
       <fileset dir="external">
         <include name="crimson*.jar"/>
         <include name="xerces*.jar"/>
@@ -78,22 +96,26 @@ Microsystems, Inc. All Rights Reserved.
       </fileset>
     </copy>
     <!-- [PENDING] may according to wishes give another attribute: eof="add" -->
-    <fixcrlf srcdir="netbeans/bin" cr="add">
+    <fixcrlf srcdir="${build}/bin" cr="add">
       <include name="**/*.bat"/>
       <include name="**/*.cmd"/>
     </fixcrlf>
   </target>
 
   <target name="netbeans" depends="jars,release" description="Build everything.">
-    <mkdir dir="netbeans/lib/patches"/>
-    <mkdir dir="netbeans/modules"/>
-    <genlist targetname="nbm" outputfiledir="netbeans"/>
+    <mkdir dir="${build}/lib/patches"/>
+    <mkdir dir="${build}/modules"/>
+    <genlist outputfiledir="${build}" module="lib/core.jar">
+        <fileset dir="${build}">
+            <patternset refID="core.files"/>
+        </fileset>
+    </genlist>
   </target>
 
   <target name="nbm" depends="netbeans" description="Build an NBM.">
     <makenbm file="core.nbm"
-             topdir="."
-             module="netbeans/lib/core.jar"
+             productDir="${build}"
+             module="lib/core.jar"
 	     homepage="http://core.${homepage.base}/"
 	     distribution="http://${dist.base}/core.nbm">
       <license name="core-license.txt">
@@ -171,10 +193,11 @@ included with the NetBeans core:</text>
       <fileset dir=".">
         <include name="*-subst.mf"/>
       </fileset>
+      <fileset dir="${build}">
+        <patternset refID="core.files"/>
+      </fileset>
     </delete>
-    <delete dir="netbeans"/>
     <delete dir="modules-lib"/>
-    <delete dir="Info"/>
     <delete file="core.nbm"/>
   </target>
 
