--- a/openide.execution/build.xml
+++ b/openide.execution/build.xml
@@ -24,11 +24,16 @@ Microsystems, Inc. All Rights Reserved.
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
     <property name="license.file" value="${nb_all}/nbbuild/standard-nbm-license.txt"/>
+    <property name="build" location="../nbbuild/netbeans"/>
 
+    <patternset id="openide/execution.files">
+      <include name="modules/autoload/openide-execution.jar"/>
+    </patternset>
+ 
     <path id="cp">
         <pathelement location="${nb_all}/openide/openide-13javac-workaround.jar"/>
-        <pathelement location="${nb_all}/openide/netbeans/lib/openide.jar"/>
-        <pathelement location="${nb_all}/openide/io/netbeans/modules/autoload/openide-io.jar"/>
+        <pathelement location="${build}/lib/openide.jar"/>
+        <pathelement location="${build}/modules/autoload/openide-io.jar"/>
     </path>
   
     <target name="compile">
@@ -38,10 +43,10 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="jars" depends="compile">
-        <mkdir dir="netbeans/modules/autoload"/>
+        <mkdir dir="${build}/modules/autoload"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <locjar jarfile="netbeans/modules/autoload/openide-execution.jar"
+        <locjar jarfile="${build}/modules/autoload/openide-execution.jar"
                 manifest="manifest-subst.mf"
                 basedir="src"
 	        excludesfile="${nb_all}/nbbuild/standard-jar-excludes.txt"
@@ -51,13 +56,17 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="netbeans" depends="jars">
-        <genlist targetname="nbm" outputfiledir="netbeans"/>
+      <genlist outputfiledir="${build}" module="modules/autoload/openide-execution.jar">
+          <fileset dir="${build}">
+	      <patternset refID="openide/execution.files"/>
+          </fileset>
+      </genlist>
     </target>
 
     <target name="nbm" depends="netbeans">
         <makenbm file="openide-execution.nbm"
-                 topdir="."
-                 module="netbeans/modules/autoload/openide-execution.jar"
+                 productDir="${build}"
+                 module="modules/autoload/openide-execution.jar"
                  homepage="http://java.${homepage.base}/"
                  distribution="http://${dist.base}/openide-execution.nbm">
             <license file="${license.file}"/>
@@ -163,11 +172,12 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="src">
                 <include name="**/*.class"/>
             </fileset>
+            <fileset dir="${build}">
+   	      <patternset refID="openide/execution.files"/>
+            </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
         <delete file="openide-execution.nbm"/>
-        <delete dir="netbeans"/>
-        <delete dir="Info"/>
         <delete dir="javadoc"/>
     </target>
   
