--- a/usersguide/build.xml
+++ b/usersguide/build.xml
@@ -18,17 +18,26 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
+  <property name="build" location="../nbbuild/netbeans"/>
 
   <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
 
+  <patternset id="usersguide.files">
+    <include name="modules/usersguide.jar"/>
+    <include name="modules/docs/usersguide.jar"/>
+    <include name="docs/org/netbeans/modules/usersguide/ide.css"/>
+    <include name="sources/org/netbeans/examples/lib/timerbean/**"/>
+    <include name="beans/TimerBean.jar"/>
+  </patternset>
+
   <target name="compile">
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath>
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <fileset dir="../openide/netbeans/lib">
+        <fileset dir="${build}/lib">
           <include name="openide*.jar" />
         </fileset>
       </classpath>
@@ -49,10 +58,10 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="jars" depends="tojar">
-    <mkdir dir="netbeans/modules"/>
+    <mkdir dir="${build}/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="netbeans/modules/usersguide.jar"
+    <locjar jarfile="${build}/modules/usersguide.jar"
             manifest="manifest-subst.mf"
 	    excludesfile="../nbbuild/standard-jar-excludes.txt"
 	    compress="false"
@@ -62,7 +71,7 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="release">
-    <copy todir="netbeans">
+    <copy todir="${build}">
       <fileset dir="release"/>
     </copy>
   </target>
@@ -78,8 +87,8 @@ Microsystems, Inc. All Rights Reserved.
       <exclude name="pending.html"/>
       <exclude name="ja/"/>
     </jhindexer>
-    <mkdir dir="netbeans/modules/docs"/>
-    <locjar jarfile="netbeans/modules/docs/usersguide.jar"
+    <mkdir dir="${build}/modules/docs"/>
+    <locjar jarfile="${build}/modules/docs/usersguide.jar"
 	    compress="true">
       <fileset dir="javahelp" excludesfile="../nbbuild/standard-jar-excludes.txt">
         <!-- Temporary files, or preprocessing scripts: -->
@@ -93,18 +102,22 @@ Microsystems, Inc. All Rights Reserved.
       </fileset>
       <locale name="ja"/>
     </locjar>
-    <mkdir dir="netbeans/docs/org/netbeans/modules/usersguide"/>
-    <copy file="javahelp/org/netbeans/modules/usersguide/ide.css" tofile="netbeans/docs/org/netbeans/modules/usersguide/ide.css"/>
+    <mkdir dir="${build}/docs/org/netbeans/modules/usersguide"/>
+    <copy file="javahelp/org/netbeans/modules/usersguide/ide.css" tofile="${build}/docs/org/netbeans/modules/usersguide/ide.css"/>
   </target>
 
   <target name="netbeans" depends="jars,release,javahelp">
-    <genlist targetname="nbm" outputfiledir="netbeans"/>
+      <genlist outputfiledir="${build}" module="modules/usersguide.jar">
+          <fileset dir="${build}">
+	      <patternset refID="usersguide.files"/>
+          </fileset>
+      </genlist>
   </target>
 
   <target name="nbm" depends="netbeans">
     <makenbm file="usersguide.nbm"
-             topdir="."
-             module="netbeans/modules/usersguide.jar"
+             productDir="${build}"
+             module="modules/usersguide.jar"
 	     homepage="http://usersguide.${homepage.base}/"
 	     distribution="http://${dist.base}/usersguide.nbm">
       <license file="${license.file}"/>
@@ -115,14 +128,15 @@ Microsystems, Inc. All Rights Reserved.
   <target name="clean">
     <delete file="manifest-subst.mf"/>
     <delete file="usersguide.nbm"/>
-    <delete dir="netbeans"/>
-    <delete dir="Info"/>
     <delete>
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
       <fileset dir="demosrc">
         <include name="**/*.class"/>
+      </fileset>
+      <fileset dir="${build}">
+        <patternset refID="usersguide.files"/>
       </fileset>
     </delete>
     <delete dir="javahelp/org/netbeans/modules/usersguide/JavaHelpSearch2"/>
