--- a/utilities/build.xml
+++ b/utilities/build.xml
@@ -18,18 +18,23 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
+  <property name="build" location="../nbbuild/netbeans"/>
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
 
+  <patternset id="utilities.files">
+    <include name="modules/utilities.jar"/>
+  </patternset>
+
   <target name="init">
     <path id="utilities-cp">
       <pathelement location="../openide/openide-13javac-workaround.jar"/>
-      <pathelement location="../openide/netbeans/lib/openide.jar"/>
-      <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-      <pathelement location="../openide/io/netbeans/modules/autoload/openide-io.jar"/>
-      <pathelement location="../openidex/netbeans/modules/autoload/openidex.jar"/>
+      <pathelement location="${build}/lib/openide.jar"/>
+      <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+      <pathelement location="${build}/modules/autoload/openidex.jar"/>
+      <pathelement location="${build}/modules/autoload/openide-io.jar"/>
       <fileset dir="../core/external">
         <include name="regexp*.jar"/>
         <include name="xml-apis*.jar"/>
@@ -44,10 +49,10 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="jars" depends="compile">
-    <mkdir dir="netbeans/modules"/>
+    <mkdir dir="${build}/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="netbeans/modules/utilities.jar"
+    <locjar jarfile="${build}/modules/utilities.jar"
             manifest="manifest-subst.mf"
             basedir="src"
             excludesfile="../nbbuild/standard-jar-excludes.txt"
@@ -57,13 +62,17 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="netbeans" depends="jars">
-    <genlist targetname="nbm" outputfiledir="netbeans"/>
+      <genlist outputfiledir="${build}" module="modules/utilities.jar">
+          <fileset dir="${build}">
+	      <patternset refID="utilities.files"/>
+          </fileset>
+      </genlist>
   </target>
 
   <target name="nbm" depends="netbeans">
     <makenbm file="utilities.nbm"
-             topdir="."
-             module="netbeans/modules/utilities.jar"
+             productDir="${build}"
+             module="modules/utilities.jar"
 	     homepage="http://utilities.${homepage.base}/"
 	     distribution="http://${dist.base}/utilities.nbm">
       <license file="${license.file}"/>
@@ -76,12 +85,13 @@ Microsystems, Inc. All Rights Reserved.
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
+      <fileset dir="${build}">
+        <patternset refID="utilities.files"/>
+      </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="utilities.nbm"/>
-    <delete dir="netbeans"/>
     <delete dir="javadoc"/>
-    <delete dir="Info"/>
   </target>
 
   <target name="javadoc" description="Build utilities module API documentation." depends="init">
