--- a/web.core/build.xml
+++ b/web.core/build.xml
@@ -24,6 +24,11 @@ Microsystems, Inc. All Rights Reserved.
   <property name="license.file" value="../../nbbuild/standard-nbm-license.txt"/>
   <property name="nbm_alias" value="nb_ide"/>
   <property name="webbeans_root" location="src/org/netbeans/modules/web/dd/model"/>
+  <property name="build" location="../nbbuild/netbeans"/>
+
+  <patternset id="web/core.files">
+    <include name="modules/jsp.jar"/>
+  </patternset>
 
   <!-- Check if it is neceseary to rebuild beans -->
   <target name="dd2beans_init">
@@ -45,10 +50,9 @@ Microsystems, Inc. All Rights Reserved.
             <include name="crimson*.jar"/>
             <include name="xml-apis*.jar"/>
           </fileset>
-	  <!--<pathelement path="${nb_root}/logger/netbeans/lib/ext/logger.jar" />-->
-	  <pathelement path="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar" />
-	  <fileset dir = "${nb_root}/openide">
-		<include name="netbeans/lib/openide*.jar"/>
+	  <pathelement path="${build}/modules/schema2beans.jar" />
+	  <fileset dir = "${build}/lib">
+		<include name="openide*.jar"/>
 	  </fileset>
 	</classpath>
 	<arg line= "-f ${nb_root}/web/core/src/org/netbeans/modules/web/core/resources/web-app_2_3.dtd" />
@@ -65,31 +69,30 @@ Microsystems, Inc. All Rights Reserved.
           <fileset dir="${nb_root}/core/external">
             <include name="xml-apis*.jar"/>
           </fileset>
-        <pathelement location="${nb_root}/core/netbeans/lib/core.jar"/> <!-- XXX: ExLocalFileSystem in UnpackWarAction -->
-        <pathelement location="${nb_root}/openidex/netbeans/modules/autoload/openidex.jar"/>
-        <pathelement location="${nb_root}/html/netbeans/modules/html.jar"/>
-        <pathelement location="${nb_root}/java/netbeans/modules/java.jar"/>
-        <pathelement location="${nb_root}/jarpackager/netbeans/modules/jarpackager.jar"/>
-        <pathelement location="${nb_root}/debuggercore/netbeans/modules/autoload/debuggerCore.jar"/>
-        <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar" />
-        <pathelement location="${nb_root}/openide/netbeans/lib/openide.jar"/>
-        <pathelement location="${nb_root}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-        <pathelement location="${nb_root}/openide/compiler/netbeans/modules/autoload/openide-compiler.jar"/>
-        <pathelement location="${nb_root}/openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
-        <pathelement location="${nb_root}/openide/io/netbeans/modules/autoload/openide-io.jar"/>
-        <pathelement location="${nb_root}/java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
-        <pathelement location="${nb_root}/openidex/netbeans/modules/autoload/openidex.jar"/>
-        <pathelement location="${nb_root}/j2eeserver/netbeans/modules/autoload/j2eeserver.jar"/>
-	<pathelement path="${nb_root}/xml/api/netbeans/modules/autoload/xml-api.jar" />
+        <pathelement location="${build}/lib/core.jar"/> <!-- XXX: ExLocalFileSystem in UnpackWarAction -->
+        <pathelement location="${build}/modules/html.jar"/>
+        <pathelement location="${build}/modules/java.jar"/>
+        <pathelement location="${build}/modules/jarpackager.jar"/>
+        <pathelement location="${build}/modules/autoload/debuggerCore.jar"/>
+        <pathelement location="${build}/modules/schema2beans.jar" />
+        <pathelement location="${build}/lib/openide.jar"/>
+        <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="${build}/modules/autoload/java-src-model.jar"/>
+        <pathelement location="${build}/modules/autoload/openidex.jar"/>
+        <pathelement location="${build}/modules/autoload/j2eeserver.jar"/>
+	<pathelement location="${build}/modules/autoload/xml-api.jar" />
+        <pathelement location="${build}/modules/autoload/openide-compiler.jar"/>
+        <pathelement location="${build}/modules/autoload/openide-execution.jar"/>
+        <pathelement location="${build}/modules/autoload/openide-io.jar"/>
       </classpath>
     </javac>
   </target>
 
   <target name="jars" depends="compile">
-    <mkdir dir="netbeans/modules"/>
+    <mkdir dir="${build}/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="netbeans/modules/jsp.jar"
+    <locjar jarfile="${build}/modules/jsp.jar"
             manifest="manifest-subst.mf"
             basedir="src"
 	    excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt"
@@ -101,14 +104,18 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="netbeans" depends="jars">
-    <genlist targetname="nbm" outputfiledir="netbeans"/>
+      <genlist outputfiledir="${build}" module="modules/jsp.jar">
+          <fileset dir="${build}">
+	      <patternset refID="web/core.files"/>
+          </fileset>
+      </genlist>
   </target>
 
   <target name="nbm" depends="netbeans">
     <delete dir="Info"/>
     <makenbm file="web-jsp.nbm"
-             topdir="."
-             module="netbeans/modules/jsp.jar"
+             productDir="${build}"
+             module="modules/jsp.jar"
 	     homepage="http://web.${homepage.base}/"
 	     distribution="http://${dist.base}/web-jsp.nbm">
       <license file="${license.file}"/>
@@ -121,11 +128,13 @@ Microsystems, Inc. All Rights Reserved.
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
+      <fileset dir="${build}">
+        <patternset refID="web/core.files"/>
+      </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="web-jsp.nbm"/>
-    <delete dir="Info"/>
-    <delete dir="netbeans"/>
+    <delete dir="src/org/netbeans/modules/web/dd/model"/>
   </target>
 
   <target name="clean-ddgen-src">
@@ -139,7 +148,7 @@ Microsystems, Inc. All Rights Reserved.
 
   <!-- This target will only work *inside* the IDE! -->
   <target depends="jars" description="Test the module inside the running IDE." name= "test">
-    <nbinstaller action="reinstall" module="netbeans/modules/jsp.jar"/>
+    <nbinstaller action="reinstall" module="${build}/modules/jsp.jar"/>
   </target>
 
 </project>
