--- a/web.debug/build.xml
+++ b/web.debug/build.xml
@@ -24,26 +24,31 @@ Microsystems, Inc. All Rights Reserved.
   <property name="license.file" value="../../nbbuild/standard-nbm-license.txt"/>
   <property name="nbm_alias" value="nb_ide"/>
   <property name="webbeans_root" location="src/org/netbeans/modules/web/dd/model"/>
+  <property name="build" location="../nbbuild/netbeans"/>
+
+  <patternset id="web/jspdebug.files">
+    <include name="modules/jspdebug.jar"/>
+  </patternset>
 
   <target name="compile">
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath>
-         <pathelement location="${nb_root}/openide/openide-13javac-workaround.jar"/>
-         <pathelement location="${nb_root}/core/netbeans/lib/core.jar"/>
-         <pathelement location="${nb_root}/openidex/netbeans/modules/autoload/openidex.jar"/>
-         <pathelement location="${nb_root}/editor/netbeans/modules/editor.jar"/>
-         <pathelement location="${nb_root}/editor/netbeans/modules/ext/nb-editor.jar"/>
-         <pathelement location="${nb_root}/debuggercore/netbeans/modules/autoload/debuggerCore.jar"/>
-         <pathelement location="${nb_root}/debuggerjpda/netbeans/modules/jpdaDebugger.jar"/>
-         <pathelement location="${nb_root}/java/netbeans/modules/java.jar"/>
-         <pathelement location="${nb_root}/j2eeserver/netbeans/modules/autoload/j2eeserver.jar"/>
-         <pathelement location="${nb_root}/web/core/netbeans/modules/jsp.jar"/>
-         <pathelement location="${nb_root}/web/jspsyntax/netbeans/modules/jsp-syntax.jar"/>
-        <pathelement location="${nb_root}/openide/netbeans/lib/openide.jar"/>
-        <pathelement location="${nb_root}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-        <pathelement location="${nb_root}/openide/compiler/netbeans/modules/autoload/openide-compiler.jar"/>
-        <pathelement location="${nb_root}/openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
-        <pathelement location="${nb_root}/java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
+        <pathelement location="${nb_root}/openide/openide-13javac-workaround.jar"/>
+        <pathelement location="${build}/lib/core.jar"/>
+        <pathelement location="${build}/modules/autoload/openidex.jar"/>
+        <pathelement location="${build}/modules/editor.jar"/>
+        <pathelement location="${build}/modules/ext/nb-editor.jar"/>
+        <pathelement location="${build}/modules/autoload/debuggerCore.jar"/>
+        <pathelement location="${build}/modules/jpdaDebugger.jar"/>
+        <pathelement location="${build}/modules/java.jar"/>
+        <pathelement location="${build}/modules/autoload/j2eeserver.jar"/>
+        <pathelement location="${build}/modules/jsp.jar"/>
+        <pathelement location="${build}/modules/jsp-syntax.jar"/>
+        <pathelement location="${build}/lib/openide.jar"/>
+        <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="${build}/modules/autoload/java-src-model.jar"/>
+        <pathelement location="${build}/modules/autoload/openide-compiler.jar"/>
+        <pathelement location="${build}/modules/autoload/openide-execution.jar"/>
         <!-- Hopefully set up by nbbuild/build.xml: -->
         <pathelement location="${jdkhome}/lib/tools.jar"/>
       </classpath>
@@ -51,10 +56,10 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="jars" depends="compile">
-    <mkdir dir="netbeans/modules"/>
+    <mkdir dir="${build}/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="netbeans/modules/jspdebug.jar"
+    <locjar jarfile="${build}/modules/jspdebug.jar"
             manifest="manifest-subst.mf"
             basedir="src"
 	    excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt"
@@ -65,14 +70,18 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="netbeans" depends="jars">
-    <genlist targetname="nbm" outputfiledir="netbeans"/>
+      <genlist outputfiledir="${build}" module="modules/jspdebug.jar">
+          <fileset dir="${build}">
+	      <patternset refID="web/jspdebug.files"/>
+          </fileset>
+      </genlist>
   </target>
 
   <target name="nbm" depends="netbeans">
     <delete dir="Info"/>
     <makenbm file="jspdebug.nbm"
-             topdir="."
-             module="netbeans/modules/jspdebug.jar"
+             productDir="${build}"
+             module="modules/jspdebug.jar"
 	     homepage="http://web.${homepage.base}/"
 	     distribution="http://${dist.base}/jspdebug.nbm">
       <license file="${license.file}"/>
@@ -85,16 +94,17 @@ Microsystems, Inc. All Rights Reserved.
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
+      <fileset dir="${build}">
+        <patternset refID="web/jspdebug.files"/>
+      </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="jspdebug.nbm"/>
-    <delete dir="Info"/>
-    <delete dir="netbeans"/>
   </target>
 
   <!-- This target will only work *inside* the IDE! -->
   <target depends="jars" description="Test the module inside the running IDE." name= "test">
-    <nbinstaller action="reinstall" module="netbeans/modules/jspdebug.jar"/>
+    <nbinstaller action="reinstall" module="${build}/modules/jspdebug.jar"/>
   </target>
 
 </project>
