--- a/web.monitor/build.xml
+++ b/web.monitor/build.xml
@@ -27,10 +27,20 @@ Microsystems, Inc. All Rights Reserved.
   <property name="nbm_alias" value="nb_ide"/>
   <property name="storepass" value="?"/>
 
-  <property name="servlet22" 
-     location="${nb_root}/httpserver/external/servlet-2.2.jar"/>
-  <property name="servlet23" 
-     location="${nb_root}/web/external/servlet-2.3.jar"/>
+  <property name="build" location="../nbbuild/netbeans"/>
+
+  <property name="servlet22" location="${nb_root}/httpserver/external/servlet-2.2.jar"/>
+  <property name="servlet23" location="${nb_root}/web/external/servlet-2.3.jar"/>
+
+  <patternset id="monitor.files">
+    <include name="modules/monitor.jar"/>
+    <include name="modules/docs/monitor.jar"/>
+    <include name="modules/ext/httpmonitor.jar"/>
+    <include name="modules/ext/monitor-valve.jar"/>
+    <include name="tomcat404/server/lib/monitor-valve.jar"/>
+    <include name="tomcat404/lib/httpmonitor.jar"/>
+  </patternset>
+
 
   <target name="setup-jdkhome-1">
     <!-- Note: user-configured -Djavahome=... will always override this: -->
@@ -51,12 +61,18 @@ Microsystems, Inc. All Rights Reserved.
 
   <!-- These are the primary targets. -->
 
-  <target name="netbeans" depends="jars,javahelp,release"/>
+  <target name="netbeans" depends="jars,javahelp,release">
+      <genlist outputfiledir="${build}" module="modules/monitor.jar">
+          <fileset dir="${build}">
+	      <patternset refID="monitor.files"/>
+          </fileset>
+      </genlist>
+  </target>
 
   <target name="nbm" depends="netbeans">
     <makenbm file="monitor.nbm"
-             topdir="."
-	     module="netbeans/modules/monitor.jar"
+             productDir="${build}"
+	     module="modules/monitor.jar"
 	     homepage="http://monitor.${homepage.base}/"
 	     distribution="http://${dist.base}/monitor.nbm">
       <license file="${license.file}" />
@@ -69,9 +85,10 @@ Microsystems, Inc. All Rights Reserved.
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
+      <fileset dir="${build}">
+        <patternset refID="monitor.files"/>
+      </fileset>
     </delete>
-    <delete dir="netbeans"/>
-    <delete dir="Info"/>
    <delete dir="javahelp/org/netbeans/modules/web/monitor/docs/JavaHelpSearch2"/>
    <delete dir="javahelp/org/netbeans/modules/web/monitor/docs/ja/JavaHelpSearch2"/>
    <delete file="monitor.nbm"/>	
@@ -98,8 +115,8 @@ Microsystems, Inc. All Rights Reserved.
       <exclude name="JavaHelpSearch2/"/>
       <exclude name="credits.html"/>
     </jhindexer>
-    <mkdir dir="netbeans/modules/docs"/>
-    <locjar jarfile="netbeans/modules/docs/monitor.jar"
+    <mkdir dir="${build}/modules/docs"/>
+    <locjar jarfile="${build}/modules/docs/monitor.jar"
             compress="true">
       <fileset dir="javahelp" excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt"/>
       <locale name="ja"/>
@@ -112,9 +129,11 @@ Microsystems, Inc. All Rights Reserved.
          they will be in the same directory as the rest of bundled Tomcat (it means there won't 
          be a conflict between IDE instalation dir and user dir when installed from NBM
     --> 
-    <copy file="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar" tofile="${nb_root}/tomcatint/bundledtomcat/netbeans/tomcat404/lib/schema2beans.jar"/>
-    <copy file="netbeans/modules/ext/httpmonitor.jar"                      tofile="${nb_root}/tomcatint/bundledtomcat/netbeans/tomcat404/lib/httpmonitor.jar"/>
-    <copy file="netbeans/modules/ext/monitor-valve.jar"                    tofile="${nb_root}/tomcatint/bundledtomcat/netbeans/tomcat404/server/lib/monitor-valve.jar"/>
+    <mkdir dir="${build}/tomcat404/lib"/>
+    <mkdir dir="${build}/tomcat404/server/lib"/>
+    <copy file="${build}/modules/schema2beans.jar"        tofile="${build}/tomcat404/lib/schema2beans.jar"/>
+    <copy file="${build}/modules/ext/httpmonitor.jar"     tofile="${build}/tomcat404/lib/httpmonitor.jar"/>
+    <copy file="${build}/modules/ext/monitor-valve.jar"   tofile="${build}/tomcat404/server/lib/monitor-valve.jar"/>
   </target>
 
 
@@ -131,10 +150,10 @@ Microsystems, Inc. All Rights Reserved.
 
        <classpath>
          <pathelement location="${nb_root}/openide/openide-13javac-workaround.jar"/>
-         <pathelement location="${nb_root}/openide/netbeans/lib/openide.jar"/>
-         <pathelement location="${nb_root}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-         <pathelement location="${nb_root}/httpserver/netbeans/modules/httpserver.jar"/>
-         <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
+         <pathelement location="${build}/lib/openide.jar"/>
+         <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+         <pathelement location="${build}/modules/httpserver.jar"/>
+         <pathelement location="${build}/modules/schema2beans.jar"/>
          <fileset dir="${nb_root}/core/external">
            <include name="xml-apis*.jar"/>
          </fileset>
@@ -154,14 +173,14 @@ Microsystems, Inc. All Rights Reserved.
          <fileset dir="${nb_root}/core/external">
            <include name="xml-apis*.jar"/>
          </fileset>
-         <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
+         <pathelement location="${build}/modules/schema2beans.jar"/>
          <pathelement location="${servlet23}"/>	
        </classpath>
      </javac>
   </target>
 
   <target name="compile-catalina-check">
-    <available property="have-catalina" file="${nb_root}/tomcatint/bundledtomcat/netbeans/tomcat404/server/lib/catalina.jar"/>
+    <available property="have-catalina" file="${build}/tomcat404/server/lib/catalina.jar"/>
   </target>
 
   <target name="compile-catalina" if="have-catalina" depends="compile-server,compile-catalina-check">
@@ -172,7 +191,7 @@ Microsystems, Inc. All Rights Reserved.
 	 includes="**/monitor/catalina/**">
        <classpath>
           <pathelement location="${servlet23}"/>
-          <pathelement location="${nb_root}/tomcatint/bundledtomcat/netbeans/tomcat404/server/lib/catalina.jar"/> 
+          <pathelement location="${build}/tomcat404/server/lib/catalina.jar"/> 
        </classpath>
      </javac>
   </target>
@@ -181,12 +200,12 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="module-jars">
-    <mkdir dir="netbeans/modules"/>
+    <mkdir dir="${build}/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf"
           filtering="on"/>
 
-    <locjar jarfile="netbeans/modules/monitor.jar"
+    <locjar jarfile="${build}/modules/monitor.jar"
          manifest="manifest-subst.mf"
          compress="false">
       <locale name="ja"/>
@@ -205,8 +224,8 @@ Microsystems, Inc. All Rights Reserved.
  <!-- NOTE: this is not an IDE module. It is deployed on the execution 
       server. It will not be deployed correctly if we build a separate 
       version for another language --> 
-    <mkdir dir="netbeans/modules/ext"/>
-    <jar jarfile="netbeans/modules/ext/httpmonitor.jar"
+    <mkdir dir="${build}/modules/ext"/>
+    <jar jarfile="${build}/modules/ext/httpmonitor.jar"
          compress="false">
 	<fileset dir="src">
         <patternset excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt">
@@ -222,7 +241,7 @@ Microsystems, Inc. All Rights Reserved.
  <!-- NOTE: this is not an IDE module. It is deployed on the execution 
       server. It will not be deployed correctly if we build a separate 
       version for another language --> 
-  <jar jarfile="netbeans/modules/ext/monitor-valve.jar"
+  <jar jarfile="${build}/modules/ext/monitor-valve.jar"
          compress="false">
       <fileset dir="src">
         <patternset excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt">
