--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -26,6 +26,7 @@ Microsystems, Inc. All Rights Reserved.
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
     <property name="nbm_alias" value="nb_ide"/>
+    <property name="build" location="../nbbuild/netbeans"/>
 
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext_root}/nbantext.jar"/>
@@ -35,6 +36,12 @@ Microsystems, Inc. All Rights Reserved.
 
     <property name="build.compiler.debug" value="on"/>
 
+    <patternset id="xml/core.files">
+        <include name="modules/autoload/xml-core.jar"/>
+	<include name="modules/autoload/docs/xml-core.jar"/>
+	<include name="modules/xml.jar"/>
+	<include name="modules/xml-syntax.jar"/>
+    </patternset>
 
     <target name="init">
         <property file="${xml_root}/spec-vers.properties"/>
@@ -49,10 +56,10 @@ Microsystems, Inc. All Rights Reserved.
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
                 <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
-                <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
-                <pathelement location="${nbroot}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-                <pathelement location="${nbroot}/openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
-                <pathelement location="${nbroot}/openide/io/netbeans/modules/autoload/openide-io.jar"/>
+                <pathelement location="${build}/lib/openide.jar"/>
+                <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+                <pathelement location="${build}/modules/autoload/openide-execution.jar"/>
+                <pathelement location="${build}/modules/autoload/openide-io.jar"/>
                 <pathelement location="${tax_lib_root}/src/"/>
                 <pathelement location="${api_root}/src/"/>
                 <fileset dir="${nbroot}/core/external">
@@ -60,21 +67,19 @@ Microsystems, Inc. All Rights Reserved.
                 </fileset>
             </classpath>
         </javac>
-
-        <for-each locations="compat"/>
     </target>
 
     <target name="jars" depends="init,compile">
-        <mkdir dir="netbeans/modules"/>
+        <mkdir dir="${build}/modules"/>
 
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <locjar jarfile="netbeans/modules/autoload/xml-core.jar"
+        <locjar jarfile="${build}/modules/autoload/xml-core.jar"
                 manifest="manifest-subst.mf"
                 compress="false">
             <fileset dir="src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
             <fileset dir="compat/src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
             <locale name="ja"/>
-        </locjar>
+        </locjar>    
     </target>
 
     <target name="release">
@@ -89,8 +94,8 @@ Microsystems, Inc. All Rights Reserved.
             <exclude name="JavaHelpSearch/"/>
         </jhindexer>
 
-        <mkdir dir="netbeans/modules/docs"/>
-        <locjar jarfile="netbeans/modules/autoload/docs/xml-core.jar"
+        <mkdir dir="${build}/modules/docs"/>
+        <locjar jarfile="${build}/modules/autoload/docs/xml-core.jar"
                 compress="true">
             <fileset dir="javahelp" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
             <locale name="ja"/>
@@ -98,7 +103,11 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="netbeans" depends="jars,release,javahelp">
-        <genlist targetname="nbm" outputfiledir="netbeans"/>
+      <genlist outputfiledir="${build}" module="modules/autoload/xml-core.jar">
+          <fileset dir="${build}">
+	      <patternset refID="xml/core.files"/>
+          </fileset>
+      </genlist>
     </target>
 
     
@@ -117,9 +126,9 @@ Microsystems, Inc. All Rights Reserved.
     <target name="nbm" depends="netbeans">
         <delete dir="Info"/>
         <makenbm file="../xml-core.nbm"
-                 topdir="."
+                 productDir="${build}"
                  needsrestart="false"
-                 module="netbeans/modules/autoload/xml-core.jar"
+                 module="modules/autoload/xml-core.jar"
                  homepage="http://xml.${homepage.base}/core/"
                  distribution="http://${dist.base}/xml-core.nbm">
             <license file="${license.file}"/>
@@ -129,14 +138,15 @@ Microsystems, Inc. All Rights Reserved.
 
     <target name="clean">
         <delete>
-            <fileset dir="src">
-                <include name="**/*.class"/>
-            </fileset>
+          <fileset dir="src">
+              <include name="**/*.class"/>
+          </fileset>
+          <fileset dir="${build}">
+	      <patternset refID="xml/core.files"/>
+          </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
         <delete file="../xml-core.nbm"/>
-        <delete dir="netbeans"/>
-        <delete dir="Info"/>
         <delete dir="javahelp/org/netbeans/modules/xml/core/docs/JavaHelpSearch"/>
 
         <for-each locations="compat"/>
